Improved Device Combiner support
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@394 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -318,6 +318,7 @@ Code.740=0B 19 12 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 
 [Device Combiner]
 PID=01 44
+VariantName=SC380
 Type=DeviceCombiner
 FixedData=00 00
 DefaultCmd=00 00
@@ -325,50 +326,40 @@ CmdIndex=1
 CmdParms= Combiner Device :0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0
 CmdTranslator=Translator(0,4,4) Translator(1,4,0)
 Notes=The Device Combiner allows you to combine up to 16 different \
-protocols into one Device Upgrade for S3C8 and P8/740 remotes. It \
-is available as a Beta version for M6805 remotes. \
+protocols into one Device Upgrade. \
 \n\n\
 Any protocols specified in the Device Combiner MUST use 1-byte \
-function commands. P8- and M6-style remotes also require that the \
-protocols MUST be built-in (not an upgrade). \
+function commands.\
 \n\n\
-NOTE: On S3C8 remotes, when specifying an upgraded protocol ID, \
+NOTE: When using an upgraded protocol, \
 the user MUST ensure that the protocol code is installed on the \
-remote (using IR), as KM has no way to verify this. \
+remote (using IR), as RemoteMaster has no way to verify this. \
 \n\n\
 There is also an optional Duration Control setting that can be \
-used for each function, however, at this time it is only available \
-for S3C8 remotes. \
+used for each function. \
 \n\n\
 Setting up the Device Combiner:\
 \n\n\
-1. First, you need the individual Protocol ID's and Fixed Data for \
-each device you wish to combine. You can get this info either from \
-the devices4.xls spreadsheet, or you can use keymap-master to \
-create the code, and use the values from the Protocol ID and Fixed \
-Data cells on the Setup sheet. \
+There are 2 ways to add devices.\n\
+1. Importing from an existing RM or KM device upgrade: \n\
+On the "Device Combiner" panel, press the Import button and open \
+the device upgrade file you want to import.  Once RM has verified that \
+the protocol used by the imported upgrade file is compatible, you will be \
+asked to choose the functions to import from the upgrade. \
 \n\n\
-2. Next, start a NEW Upgrade in KM, select Device Combiner and \
-enter the data that you obtained in step 1 above into the Device \
-Combiner table. Remember, you can combine up to 16 devices. \
+2. Manually adding a protocol:\n\
+On the "Device Combiner" panel, press the Add button to display the \
+"Combiner Device" dialog.  Select the protocol to use, and enter the \
+desired values for the protocol parameters, then press the OK button. \
 \n\n\
-3. Then, go to the Functions sheet and enter the EFC's (EFC-style \
+Then, go to the Functions sheet and enter the EFC's (EFC-style \
 Button Codes MUST be used) for all of the various functions. In \
-the byte2 column, enter a zero-based number (0 to 15) (default = 0 \
-= 1st device) to tell KM which Protocol ID to use. This value can \
-be found in the Device Combiner's "#" column on the Setup sheet. \
+the "Cominer Device" column, select the entry corresponding to the \
+protocol and parameters entered above. \
 \n\n\
-For example, if you want to setup a function for the 2nd protocol \
-in the Device Combiner table, the byte2 entry would be "1". \
-\n\n\
-4. Last, to enable Duration Control (S3C8 remotes only) for the \
-function, the byte2 entry will be the number from step 3 above, \
-then a "space", and then another number from 0 to 15 that \
-indicates the duration multiple to be used (default = 0 = none). \
-\n\n\
-For example, if you're setting up a function to use the 2nd \
-protocol from the Device Combiner table, and want a duration \
-multiple of 3, the byte2 entry would be: "1 3" \
+To enable Duration Control for the \
+function, select the duration multiple to be used in the "Duration" column \
+(default = 0 = none). \
 \n\n\
 Copy and paste the Device Upgrade Code and the Protocol Code into \
 IR.exe in the normal fashion.
@@ -377,21 +368,57 @@ Code.S3C80=00 00 22 08 06 96 10 04 90 05 6B 03 E4 05 0D 38 \
            72 D7 17 1E A2 36 3B F7 97 01 FF 06 D9 02 56 8D \
            BF C6 CA 01 00 C6 C2 20 31 70 C3 70 C2 C6 DA 41 \
            51 1F 40 EC
-#Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
-#         85 E6 20 20 31 B0 31 A0 02 B1 ## 4A 4A 4A 4A AA \
-#         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
-#         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
-#         CA C0 FF D0 F4 4C 40 EC 60
-#Code.6805-C9=00 00 02 BE 5A DE 01 47 BF E0 D6 01 47 B7 C1 D6 01 \
-#             48 B7 C2 CD 20 31 24 01 81 AB 02 24 01 5C CD ## 97 \
-#             54 54 54 54 B6 5B E7 5A BF 41 51 BF E1 27 13 3F E2 \
-#             BE E0 D6 01 49 BE E2 E7 5A 3C E0 3C E2 3A E1 26 EF \
-#             CC 40 EC
-#Code.6805-RC16/18=00 00 02 BE 5A DE 01 47 BF E0 D6 01 47 B7 C1 D6 \
-#                  01 48 B7 C2 CD 20 31 24 01 81 AB 02 24 01 5C CD \
-#                  ## 97 54 54 54 54 B6 5B E7 5A BF 41 51 BF E1 27 \
-#                  13 3F E2 BE E0 D6 01 49 BE E2 E7 5A 3C E0 3C E2 \
-#                  3A E1 26 EF CC 40 EC
+
+[Device Combiner]
+PID=01 44
+Type=DeviceCombiner
+FixedData=00 00
+DefaultCmd=00 00
+CmdIndex=1
+CmdParms= Combiner Device :0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0
+CmdTranslator=Translator(0,4,4) Translator(1,4,0)
+Notes=The Device Combiner allows you to combine up to 16 different \
+protocols into one Device Upgrade. \
+\n\n\
+Any protocols specified in the Device Combiner MUST use 1-byte \
+function commands. Only built-in protocols are supported. \
+\n\n\
+Setting up the Device Combiner:\
+\n\n\
+There are 2 ways to add devices.\n\
+1. Importing from an existing RM or KM device upgrade: \n\
+On the "Device Combiner" panel, press the Import button and open \
+the device upgrade file you want to import.  Once RM has verified that \
+the protocol used by the imported upgrade file is compatible, you will be \
+asked to choose the functions to import from the upgrade. \
+\n\n\
+2. Manually adding a protocol:\n\
+On the "Device Combiner" panel, press the Add button to display the \
+"Combiner Device" dialog.  Select the protocol to use, and enter the \
+desired values for the protocol parameters, then press the OK button. \
+\n\n\
+Then, go to the Functions sheet and enter the EFC's (EFC-style \
+Button Codes MUST be used) for all of the various functions. In \
+the "Cominer Device" column, select the entry corresponding to the \
+protocol and parameters entered above. \
+\n\n\
+Copy and paste the Device Upgrade Code and the Protocol Code into \
+IR.exe in the normal fashion.
+Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
+         85 E6 20 84 AD B0 31 A0 02 B1 BC 4A 4A 4A 4A AA \
+         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
+         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
+         CA C0 FF D0 F4 4C 7B B5 60 01
+Code.6805-C9=00 00 02 BE 5A DE 01 4E BF E0 D6 01 4E B7 C1 D6 \
+             01 4F B7 C2 CD 0F DB 24 01 81 AB 02 24 01 5C CD \
+             0F BE 97 54 54 54 54 B6 5B E7 5A BF 66 BF E1 27 \
+             13 3F E2 BE E0 D6 01 50 BE E2 E7 5A 3C E0 3C E2 \
+             3A E1 26 EF CC 11 08 01
+Code.6805-RC16/18=00 00 02 BE 5A DE 01 59 BF E0 D6 01 59 B7 C1 D6 \
+                  01 5A B7 C2 CD 0F C8 24 01 81 AB 02 24 01 5C CD \
+                  0F AB 97 54 54 54 54 B6 5B E7 5A BF 67 BF E1 27 \
+                  13 3F E2 BE E0 D6 01 5B BE E2 E7 5A 3C E0 3C E2 \
+                  3A E1 26 EF CC 11 44 01
 
 [Dishplayer]
 PID=01 0F
