Fix Sony Combo (new) protocol support
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@396 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -2001,10 +2001,18 @@ Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 \
 OldNames=Sony Combo
 PID=00 27
 VariantName=new
-CmdTranslator=Translator(lsb)
+CmdTranslator=Translator(lsb,0,7) SonyComboTranslator()
 CmdParms=OBC=0,Protocol:Sony12|Sony15|Sony20,Device,Sub-device:none|1|2|3|4=0
 CmdParmInit=PickInitializer(3,,n0,n1,n2,n3)
-Notes=12/15/20 Combo
+Notes=This combo protocol allows you to combine as many Sony12 and \
+Sony15 codes as you like with up to 4 Sony20 codes. You enter the 4 Sony20 sub-dewice \
+numbers on the Setup panel.\n\n\
+On the Functions panel, you enter the \
+codes for the functions in OBC format as usual. Then you select the desired \
+protocol for the function.  Next enter the desired device number.  If you enter a \
+device number greater than 31, the protocol will be changed to Sony15, as it is the \
+only one that supports values greater than 31. For Sony12 and Sony15, the Sub-device column \
+must have the value "none". For Sony20 functions, select the desired sub-device number. 
 DevParms=Sony20 subdev1,Sony20 subdev2,Sony20 subdev3,Sony20 subdev4
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8) \
                  Translator(lsb,2,8,16) Translator(lsb,3,8,24)
