Add import command translator for Sony Combo protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@410 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1292,7 +1292,7 @@ Code.740=0A 18 11 80 10 F6 BA 01 16 08 08 01 9F 02 FF 61 \
 PID=00 7E
 CmdParms=Prefix Dev:none|X=0,Prefix Cmd:none|X=0,Device:1|2,OBC=0
 CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,1) PickInitializer(2,0,2)
-CmdTranslator=Translator(lsb,comp,3) Translator(0,1,5) Translator(1,1,5) Translator(2,1,5)
+CmdTranslator=Translator(lsb,comp,3) Translator(comp,0,1,5) Translator(comp,1,1,5) Translator(comp,2,1,5)
 Notes=DVD/0525,0571\
       \n\n\
       A Pioneer signal consists of either one or two parts.  Each part has both a \
@@ -1331,10 +1331,10 @@ Notes=DVD/0525,0571\
       by these limits.  If you need more flexibility, you should look into the other \
       Pioneer protocols and/or use Key Moves on another setup code for some of your \
       signals.
-DevParms=Device 1=163,Prefix Command=153,Device 2=175
+DevParms=Device 1=163,Device 2=175,Prefix Command=153
 FixedData=3a 66 0a
-DeviceTranslator=Translator(lsb,comp,0,8) Translator(lsb,comp,1,8,8) \
-                 Translator(lsb,comp,2,8,16)
+DeviceTranslator=Translator(lsb,comp,0,8) Translator(lsb,comp,1,8,16) \
+                 Translator(lsb,comp,2,8,8)
 Code.S3C80=40 84 31 8B 12 E5 44 08 08 01 09 00 FA 01 09 03 \
            16 C3 3C 10 A9 08 43 76 06 04 6B 06 46 29 01 8D \
            01 46 B0 01 68 06 E4 04 06 F6 01 46 E6 01 02 69 \
@@ -1342,6 +1342,11 @@ Code.S3C80=40 84 31 8B 12 E5 44 08 08 01 09 00 FA 01 09 03 \
 Code.740=0A 18 31 80 10 F6 B8 01 16 08 08 01 9F 02 FF 57 \
          E4 5B 06 81 02 47 60 10 1F 7F 3C 00 5B 3C 01 69 \
          22 00 3C 03 69 3C 02 5B 0F 7F 4C 00 FF
+#Code.6805-RC16/18=10 22 42 20 10 E5 44 08 08 00 84 84 01 84 90 59 \
+#                  95 00 84 54 2B 03 5F 04 B6 5D B7 5B 00 5F 05 10\
+#                 _7C CC 01 AF 3F 58 BE 5E B6 5B BF 53 B7 5E CD 01 \
+#                  AF A6 02 B7 58 BE 53 BF 5E CD 01 AF CD 01 89 24 \
+#                  E3 81
 
 [Pioneer DVD2]
 PID=00 7E
@@ -1362,7 +1367,7 @@ CmdIndex=0
 CmdParms=Prefix Device:none|dev1,Prefix Command:none|Cmd 1|Cmd 2,Device:dev1|dev2,OBC=0
 CmdTranslator=Translator(lsb,comp,3) PioneerMixTranslator()
 CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,2,3) PickInitializer(2,0,1)
-ImportTranslator=Translator(0,2,14) Translator(lsb,comp,1,8,0)
+ImportCmdTranslator=Translator(0,2,14) Translator(lsb,comp,1,8,0)
 DevParms=Device 1=166,Device 2=175,Cmd1 (OBC)=161,Cmd2 (OBC)=160
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,16) \
                  Translator(lsb,comp,2,8,8) Translator(lsb,comp,3,8,24)
@@ -2001,9 +2006,10 @@ Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 \
 OldNames=Sony Combo
 PID=00 27
 VariantName=new
-CmdTranslator=Translator(lsb,0,7) SonyComboTranslator()
-CmdParms=OBC=0,Protocol:Sony12|Sony15|Sony20,Device,Sub-device:none|1|2|3|4=0
-CmdParmInit=PickInitializer(3,,n0,n1,n2,n3)
+CmdParms=Protocol:Sony12|Sony15|Sony20,Device,Sub-device:none|1|2|3|4=0,OBC=0
+CmdTranslator= SonyComboTranslator() Translator(lsb,3,7)
+ImportCmdTranslator=SonyComboImporter()
+CmdParmInit=PickInitializer(2,,n0,n1,n2,n3)
 Notes=This combo protocol allows you to combine as many Sony12 and \
 Sony15 codes as you like with up to 4 Sony20 codes. You enter the 4 Sony20 sub-dewice \
 numbers on the Setup panel.\n\n\
@@ -2012,7 +2018,7 @@ codes for the functions in OBC format as usual. Then you select the desired \
 protocol for the function.  Next enter the desired device number.  If you enter a \
 device number greater than 31, the protocol will be changed to Sony15, as it is the \
 only one that supports values greater than 31. For Sony12 and Sony15, the Sub-device column \
-must have the value "none". For Sony20 functions, select the desired sub-device number. 
+must have the value "none". For Sony20 functions, select the desired sub-device number.
 DevParms=Sony20 subdev1,Sony20 subdev2,Sony20 subdev3,Sony20 subdev4
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8) \
                  Translator(lsb,2,8,16) Translator(lsb,3,8,24)
