More fixes for DeviceCombiner
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@413 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -318,7 +318,7 @@ Code.740=0B 19 12 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 
 [Device Combiner]
 PID=01 44
-VariantName=SC380
+VariantName=S3C80
 Type=DeviceCombiner
 FixedData=00 00
 DefaultCmd=00 00
@@ -363,11 +363,6 @@ function, select the duration multiple to be used in the "Duration" column \
 \n\n\
 Copy and paste the Device Upgrade Code and the Protocol Code into \
 IR.exe in the normal fashion.
-Code.S3C80=00 00 22 08 06 96 10 04 90 05 6B 03 E4 05 0D 38 \
-           04 2C FF E7 62 45 E7 32 44 E3 42 E3 52 1C 03 E3 \
-           72 D7 17 1E A2 36 3B F7 97 01 FF 06 D9 02 56 8D \
-           BF C6 CA 01 00 C6 C2 20 31 70 C3 70 C2 C6 DA 41 \
-           51 1F 40 EC
 
 [Device Combiner]
 PID=01 44
@@ -375,8 +370,8 @@ Type=DeviceCombiner
 FixedData=00 00
 DefaultCmd=00 00
 CmdIndex=1
-CmdParms= Combiner Device :0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15,Duration:0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15=0
-CmdTranslator=Translator(0,4,4) Translator(1,4,0)
+CmdParms= Combiner Device :0|1|2|3|4|5|6|7|8|9|10|11|12|13|14|15
+CmdTranslator=Translator(0,4,4)
 Notes=The Device Combiner allows you to combine up to 16 different \
 protocols into one Device Upgrade. \
 \n\n\
@@ -404,21 +399,6 @@ protocol and parameters entered above. \
 \n\n\
 Copy and paste the Device Upgrade Code and the Protocol Code into \
 IR.exe in the normal fashion.
-Code.740=00 00 02 A4 5D BE 7B 01 BD 7B 01 85 E7 BD 7C 01 \
-         85 E6 20 84 AD B0 31 A0 02 B1 BC 4A 4A 4A 4A AA \
-         A5 5E A4 5D 95 5D E0 00 F0 1B 86 E2 B9 7B 01 C6 \
-         E2 18 65 E2 AA A4 E2 80 08 BD 7D 01 99 5D 00 88 \
-         CA C0 FF D0 F4 4C 7B B5 60 01
-Code.6805-C9=00 00 02 BE 5A DE 01 4E BF E0 D6 01 4E B7 C1 D6 \
-             01 4F B7 C2 CD 0F DB 24 01 81 AB 02 24 01 5C CD \
-             0F BE 97 54 54 54 54 B6 5B E7 5A BF 66 BF E1 27 \
-             13 3F E2 BE E0 D6 01 50 BE E2 E7 5A 3C E0 3C E2 \
-             3A E1 26 EF CC 11 08 01
-Code.6805-RC16/18=00 00 02 BE 5A DE 01 59 BF E0 D6 01 59 B7 C1 D6 \
-                  01 5A B7 C2 CD 0F C8 24 01 81 AB 02 24 01 5C CD \
-                  0F AB 97 54 54 54 54 B6 5B E7 5A BF 67 BF E1 27 \
-                  13 3F E2 BE E0 D6 01 5B BE E2 E7 5A 3C E0 3C E2 \
-                  3A E1 26 EF CC 11 44 01
 
 [Dishplayer]
 PID=01 0F
