Add SharpDVDTranslator to correctly calculate command byte 2
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@419 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1906,7 +1906,7 @@ Code.740=0B 19 11 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 
 [Sharp DVD]
 PID=00 F8
-CmdTranslator=Translator(lsb,comp)
+CmdTranslator=Translator(lsb,comp) SharpDVDTranslator()
 CmdParms=OBC=0
 Notes=offical version
 DevParms=Main Device,Sub Device
