Changed Dishplayer(old) to Dishplayer Network and reversed the dev bits (as Rob requested)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@420 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -421,10 +421,10 @@ Code.6805-C9=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B \
              15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD \
              01 83 12 7C 19 7C CC 01 83
 
-[Dishplayer (old)]
+[Dishplayer Network]
 PID=00 02
 DevParms=Unit:5=0,Device Code:5=0
-DeviceTranslator=Translator(lsb,0,3,0,2) Translator(1,5,3)
+DeviceTranslator=Translator(lsb,0,3,0,2) Translator(lsb,1,5,3)
 CmdParms=OBC:6=0
 CmdTranslator=Translator(0,6) TranslatorFromDev(lsb,0,2,6)
 Notes=Standard SAT/0775 is Unit 0 / Device 0 \
@@ -440,11 +440,11 @@ Code.S3C80=2B 5C 11 8B 12 B5 05 08 08 00 C5 03 32 00 C5 05 \
 Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
          17 08 EC 44 5D 4C 00 FF
 
-[Dishplayer (old)]
+[Dishplayer Network]
 PID=00 02
 VariantName=2
 DevParms=Unit:5=0,Device Code:5=0
-DeviceTranslator=Translator(lsb,0,5) Translator(1,5,8)
+DeviceTranslator=Translator(lsb,0,5) Translator(lsb,1,5,8)
 CmdParms=OBC:6=0
 CmdTranslator=Translator(0,6)
 Notes=Standard SAT/0775 is Unit 0 / Device 0 \
@@ -461,12 +461,12 @@ Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
              17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
              B7 6F 33 5A 3C 59 CC 01 83
 
-[Dishplayer (old)]
+[Dishplayer Network]
 PID=00 02
 VariantName=5
 DevParms=Unit:5=0,Device Code:5=0
-DeviceTranslator=Translator(lsb,0,5) Translator(1,5,8)  Translator(1,5,16) \
-                 Translator(1,5,24)  Translator(1,5,32)
+DeviceTranslator=Translator(lsb,0,5) Translator(lsb,1,5,8)  Translator(lsb,1,5,16) \
+                 Translator(lsb,1,5,24)  Translator(lsb,1,5,32)
 CmdParms=OBC:6=0
 CmdTranslator=Translator(0,6)
 Notes=Standard SAT/0775 is Unit 0 / Device 0\
