Fix Bug [ 940251 ] Incorrect output for KM input file, related to importing an upgrade that uses the RC-5 protocol.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@426 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -407,7 +407,7 @@ Code.S3C80=43 8B 11 8B 12 85 49 08 05 01 0B 02 F6 01 0B 05 1C 0B 93 01 0B 0B A6 
 Code.740=0c 18 11 80 0c e0 e2 00 15 08 05 02 ee 04 5b 06 4f a9 15 20 db 00 a2 d7 a0 06 22 44 a5 5d 85 54 a5 5e 85 5d a5 54 85 5e 4c 00 ff
 Code.6805-C9=0C 19 11 20 0E E0 70 15 08 05 02 ED 04 59 06 9B 15 08 BC B6 5A B7 51 B6 5B B7 5A B6 51 B7 5B CD 01 83 12 7C 19 7C CC 01 83
 
-[Dishplayer Network]
+[Dish Network]
 PID=00 02
 DevParms=Unit:5=0,Device Code:5=0
 DeviceTranslator=Translator(lsb,0,3,0,2) Translator(lsb,1,5,3)
@@ -431,7 +431,7 @@ Code.6805-RC16/18=0B 18 11 20 10 B5 45 07 08 01 62 A3 02 62 C4 02 \
 Code.740=06 0D 11 80 0E B0 72 17 08 07 03 19 04 9A 02 46 \
          17 08 EC 44 5D 4C 00 FF
 
-[Dishplayer Network]
+[Dish Network]
 PID=00 02
 VariantName=2
 DevParms=Unit:5=0,Device Code:5=0
@@ -452,7 +452,7 @@ Code.6805-C9=06 0E 21 20 12 B8 72 17 05 06 03 18 04 99 02 A3 \
              17 08 E9 00 04 01 29 07 5B 08 B6 75 B7 6E B6 76 \
              B7 6F 33 5A 3C 59 CC 01 83
 
-[Dishplayer Network]
+[Dish Network]
 PID=00 02
 VariantName=5
 DevParms=Unit:5=0,Device Code:5=0
@@ -1271,13 +1271,16 @@ Code.6805-RC16/18=11 24 11 20 14 C5 45 08 08 00 84 85 01 84 8E 3D D1 00 84 3D 1F
 
 [RC-5]
 PID=00 E8
-DevParms=Device 1:5=0,OBC>63:bool,Device 2:5=[0],OBC>63:bool,Device 3:5=[2],OBC>63:bool
+DevParms=Device 1:6=0,OBC>63=1:bool,Device 2:6=[0],OBC>63:bool=[1],Device 3:6=[2],OBC>63:bool=[3]
+DeviceImporter=RC5Importer()
 DeviceTranslator=Translator(comp,0,5,3) Translator(comp,2,5,11) Translator(comp,4,5,19) \
                  Rc5FlagTranslator()
 FixedData=1f 1f 1f
-CmdParms=Device:0|1|2|na,OBC:7=0
-CmdTranslator=Translator(comp,1,6) Rc5Translator()
-CmdParmInit=PickInitializer(0,N0,N2,N4,N6)
+CmdParms=   Device   :0|1|2=0,OBC:7=0
+#CmdTranslator=Translator(comp,1,6) Rc5Translator()
+CmdTranslator=Rc5Translator()
+DefaultCmd=fc
+CmdParmInit=RC5Initializer()
 Notes=This combo supports half of the possible OBC range for each of up to \
       three device numbers.  To support the whole OBC range for one device \
       number requires using two of the three Device number positions for that \
@@ -1672,6 +1675,7 @@ Notes=Combines two devices, each of which may be either Sony12 or Sony15 \
    make the device number (just the one above that check box) be Sony15 even if \
    it is less than 32.
 DevParms=Device 1,Force Sony15:bool,Device 2,Force Sony15:bool
+DeviceImporter=ReorderImporter(0,2)
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,2,8,8) Sony1215Translator()
 FixedData=00 00 00
 Code.S3C80=3A 8A 31 8B 14 F5 15 05 07 02 58 01 18 01 2C 01 18 57 D0 04 B0 01 18 00 03 08 05 76 06 01 6B 04 20 01 10 C0 10 C0 FB 03 E6 12 08 8D 01 49
@@ -1684,7 +1688,7 @@ PID=00 DE
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
 Notes=two device
-DevParms=Main Device:5,Sub Device,Sony12 Device
+DevParms=Main Device:5=26,Sub Device,Sony12 Device
 DeviceTranslator=Translator(lsb,0,5) Translator(lsb,1,8,8) \
                  Translator(lsb,2,8,16)
 FixedData=58 00 00
@@ -1693,7 +1697,8 @@ Code.740=0A 18 31 80 12 B8 92 09 30 05 07 01 B6 01 B6 2B F2 60 01 BA 01 08 18 44
 Code.6805-C9=0A 19 31 20 12 B8 90 08 30 05 07 01 B5 01 B5 12 C7 60 01 BA 00 08 18 A6 22 00 5D 02 A6 0A B7 53 AE 07 B6 5D AD 3B AE 05 00 5D 0E B6 5A AD 32 AE 08 B6 5B AD 2C 3C 59 20 08 B6 5C B7 5A AD 22 17 7B 33 5A B6 53 B7 54 A6 02 B7 7E B6 54 B7 53 CD 01 83 A6 AE 4A 26 FD 3A 53 26 F7 CD 01 8C 24 EB 81 48 25 02 3C 53 5A 26 F8 81
 Code.6805-RC16/18=0F 23 31 20 12 F6 15 05 07 10 2B 96 00 95 96 2B F2 00 20 57 96 08 03 01 5D 08 A6 F5 B7_7B A6 02 B7 58 CC 01 B2
 
-[Sony Combo (old)]
+[Sony Combo (12/20)]
+OldNames=Sony Combo (old)
 PID=00 27
 VariantName=old
 CmdTranslator=Translator(lsb)
@@ -1706,8 +1711,8 @@ DefaultCmd=00 00
 Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 18 57 D0 04 B0 01 18 08 03 00 76 05 01 EB 1A E6 28 C8 E6 12 00 E6 22 00 E6 24 05 E4 05 03 E4 06 04 E6 10 00 E6 01 01 8B 02 00 11 8D 01 46
 Code.6805-RC16/18=0F 23 22 20 13 F6 15 05 07 10 2B 96 00 95 96 2B F2 00 20 57 96 08 03 00 00 5C 18 A6 C8 B7_7B 3F_67 3F_75 A6 05 B7_77 B6 5C B7 5A B6 5D B7 5B 3F_66 20 02 3A DD CC 01 B2
 
-[Sony Combo (new)]
-OldNames=Sony Combo
+[Sony Combo (12/15/20)]
+OldNames=Sony Combo,Sony Combo (new)
 PID=00 27
 VariantName=new
 CmdParms=Protocol:Sony12|Sony15|Sony20,Device,Sub-device:none|1|2|3|4=0,OBC=0
