More alternate PID support
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@430 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -512,6 +512,69 @@ Code.740=0B 19 11 80 0C E0 C0 08 31 04 08 01 77 02 8C 2B 31 3C 00 57 3C 11 78 9F
 Code.6805-C9=0B 1A 11 20 12 E0 C0 08 31 04 08 01 71 02 88 2B 67 00 00 00 00 00 11 19 5A B6 5B 48 B8 5B 2B 02 18 5A CD 01 83 CD 01 83 CD 01 8C 25 0A A6 45 AE 1F CD 01 9E 08 5A EB 81
 Code.6805-RC16/18=0F 25 11 20 0B 05 04 08 10 3A 68 01 69 3D 21 00 3F 54 19 5A B6 5B 48 B8 5B 2B 02 18 5A CD 01 AF 11 14 09 5A 10 33 54 26 07 A6 59 AE 17 CD 01 96 CD 01 89 24 E8 CC 01 AF
 
+#******************************************************************************************
+#******************************************************************************************
+# PID 00F8 stuff ------------------------------------------------------------------------
+# RDF [Protocols]:
+# 00F8 refers to version 1 (two LO-off times) same as [Sharp DVD]
+# 00F8:2 refers to version 2 (three LO-off times)
+# 00F8:3 refers to version 3 (four LO-off times)
+
+#-these are all official UEI protocols
+#-you or John will have to fill in the details on these
+
+#This is version 1, same protocol binary as [Sharp DVD] 00 F8
+#(It does not replace Sharp DVD)
+#It selects 2 lead-out-off times based on bit 0 of 1st device byte
+#KM does not allow this version of Fujitsu as an upgrade.
+#(It will allow Sharp DVD as an upgrade.)
+#Example: RCU810
+#
+#[Fujitsu]
+#PID=00 F8
+#VariantName=1
+#Code.S3C80=43 8B 52 8B 14 8F 45 08 08 00 CB 00 C4 00 CB 02 \
+#           6A 27 70 06 8F 03 3D 40 F8 20 01 76 03 01 6B 09 \
+#           E4 22 1C E4 23 1D 56 28 F7 8D 01 46
+#Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 \
+#         80 03 2B 00 08 07 5D 06 E6 5B E6 69 80 0A E6 5B \
+#         A9 5F 85 71 A9 68 85 72 4C 00 FF
+
+
+#This is version 2
+#It selects 3 lead-out-off times based on bits 0&1 of 1st device byte
+#Example: Sony DirecTiVo RM-Y809
+#
+#[Fujitsu]
+#PID=00 F8
+#VariantName=2
+#Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 \
+#           6A 27 70 06 8F 03 3D 40 F8 8C 8C 20 01 76 03 01 \
+#           6B 09 E4 22 1C E4 23 1D 56 28 F7 76 03 02 6B 22 \
+#           E4 24 1C E4 25 1D E6 29 44 E6 0C E8 F6 01 46 F6 \
+#           01 0A FB 0D 00 0C EB F4 C6 3E 00 00 B0 4A F6 01 \
+#           0A AF 8D 01 46
+
+
+#This is version 3
+#It selects 4 lead-out-off times based on bits 0&1 of 1st device byte
+#(The 6805 version also changes the carrier frequency.)
+#Example: URC-9960B01 (slightly shorter version than other type 3s)
+#
+#[Fujitsu]
+#PID=00 F8
+#VariantName=3
+#Code.S3C80=45 91 52 8B 18 8F 45 08 08 00 DA 00 C6 00 DA 02 \
+#           7D 27 70 06 D1 03 40 40 F8 92 68 55 26 20 01 08 \
+#           03 37 03 0B 37 00 13 56 28 F7 C4 22 1C 8B 0B 37 \
+#           00 05 C4 26 1C 8B 03 C4 24 1C 8D 01 46
+#Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 \
+#                  C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 \
+#                  5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A \
+#                  B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 \
+#                  B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 \
+#                  CC 01 B2
+
 [GI 4DTV Hacked]
 PID=00 44
 CmdTranslator=Translator(lsb)
@@ -1105,6 +1168,8 @@ Code.6805-RC16/18=10 22 11 20 10 E5 45 08 08 00 84 87 01 84 95 61 A8 00 84 54 2C
 
 [Pioneer DVD]
 PID=00 7E
+VariantName=1
+AlternatePID=01 7E
 CmdParms=Prefix Dev:none|X=0,Prefix Cmd:none|X=0,Device:1|2,OBC=0
 CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,1) PickInitializer(2,0,2)
 CmdTranslator=Translator(lsb,comp,3) Translator(comp,0,1,5) Translator(comp,1,1,5) Translator(comp,2,1,5)
@@ -1165,6 +1230,7 @@ Code.6805-RC16/18=10 22 42 20 10 E5 44 08 08 00 84 84 01 84 90 59 \
 
 [Pioneer DVD2]
 PID=00 7E
+VariantName=2
 DevParms=Device 1:8=163,Device 2:8=175,Command 1:8=153
 DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,16) \
                   Translator(lsb,comp,2,8,8)
@@ -1177,6 +1243,8 @@ CmdIndex=0
 
 [Pioneer MIX]
 PID=00 7E
+AlternatePID=01 7F
+VariantName=2
 DefaultCmd=00 00
 CmdIndex=0
 CmdParms=Prefix Device:none|dev1,Prefix Command:none|Cmd 1|Cmd 2,Device:dev1|dev2,OBC=0
@@ -1226,6 +1294,16 @@ Code.6805-C9=0A 19 42 20 10 F6 F8 00 16 08 08 01 9B 02 FB 1F \
              7C CC 01 83 A6 01 B7 66 BE 5E B6 5B BF 53 B7 5D \
              CD 01 83 A6 04 B7 66 A6 02 B7 58 BE 53 BF 5D CD \
              01 83 3A 58 3A 58 CD 01 8C 24 D9 81
+
+#[Pioneer MIX]
+#PID=00 7E
+#VariantName=3
+#AlternatePID=01 7F
+#Code.S3C80=40 84 62 8B 12 A5 44 08 08 01 12 00 F5 01 12 03 \
+#           0C 31 76 10 A6 08 3A 08 0A C0 C0 56 C0 0B 87 10 \
+#           04 19 04 76 0A 01 EB 06 46 29 01 8D 01 46 A6 0D \
+#           02 EB 03 E6 0D 05 B0 01 E6 10 01 F6 01 46 E6 01 \
+#           05 E6 10 06 F6 01 46 F6 01 0A 7B EA AF
 
 [Pioneer 2CMD]
 PID=00 5F
@@ -1295,18 +1373,19 @@ Code.6805-RC16/18=10 28 31 20 0D C5 81 10 08 06 00 E0 DC 00 E0 DC 6F 20 B6 5D A4
 
 [RC-5x]
 PID=00 F2
-DevParms=Device Code:5=0
-DeviceTranslator=Translator(comp,0,5,3)
-FixedData=1f
-CmdTranslator=Translator(comp,0,7,5)
-CmdParms=OBC:7=0
-DefaultCmd=ff 00
+DevParms=Device Code:5=16,Sub Dev<63=1:bool
+DeviceTranslator=Translator(comp,0,5,3) Translator(comp,1,1,1)
+FixedData=0f
+CmdTranslator=TranslatorFromDev(comp,1,1,1) Translator(comp,0,6) Translator(comp,1,6,6)
+CmdParms= Sub Device:7=0,OBC:6=0
+DefaultCmd=ff f0
 CmdIndex=1
 Notes=
 Code.S3C80=40 9A 12 8B 17 89 81 10 08 08 01 BB 01 A8 01 BB 01 A8 94 01 00 00 06 7D 00 00 04 09 76 00 01 6B 03 B6 03 20 77 77 8D 01 46
 Code.740=0C 1C 12 80 0C E9 C0 20 20 08 08 02 07 02 06 03 78 17 5A 02 AF 5D 3C 04 77 2F 5C 3C C0 7E 22 00 3C A8 7E 22 00 A2 78 A0 5D 22 44 4C 03 FF
 Code.6805-C9=0C 1D 12 20 11 C0 C0 20 20 08 08 02 13 02 0A 03 F9 00 00 00 00 04 01 57 06 B6 5A A8 20 B7 5A A6 02 B7 59 A6 C0 B7 7B CD 01 83 A6 A8 B7 7B CD 01 83 A6 5D AE 08 CD 01 9E CD 01 8C 24 E2 81
 Code.6805-RC16/18=10 27 12 20 15 87 81 10 08 04 00 D9 E1 00 D9 E1 49 27 00 00 00 CD 03 00 78 09 01 57 06 B6 5A A8 20 B7 5A 3C_66 CC 01 C4
+
 
 #[RC-5/5x Combo]
 #PID=00 73
@@ -1703,13 +1782,16 @@ PID=00 27
 VariantName=old
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
-Notes=12/15/20 Combo
+Notes=12/20 Combo
 DevParms=Sony20 subdev1,Sony20 subdev2
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8)
 FixedData=00 00
 DefaultCmd=00 00
 Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 18 57 D0 04 B0 01 18 08 03 00 76 05 01 EB 1A E6 28 C8 E6 12 00 E6 22 00 E6 24 05 E4 05 03 E4 06 04 E6 10 00 E6 01 01 8B 02 00 11 8D 01 46
-Code.6805-RC16/18=0F 23 22 20 13 F6 15 05 07 10 2B 96 00 95 96 2B F2 00 20 57 96 08 03 00 00 5C 18 A6 C8 B7_7B 3F_67 3F_75 A6 05 B7_77 B6 5C B7 5A B6 5D B7 5B 3F_66 20 02 3A DD CC 01 B2
+Code.6805-RC16/18=0F 23 22 20 13 F6 15 05 07 10 2B 96 00 95 96 2B \
+                  F2 00 20 57 96 08 03 00 00 5C 18 A6 C8 B7_7B \
+                  3F_67 3F_75 A6 05 B7_77 B6 5C B7 5A B6 5D B7 5B \
+                  3F_66 20 02 3A DD CC 01 B2
 
 [Sony Combo (12/15/20)]
 OldNames=Sony Combo,Sony Combo (new)
@@ -1742,10 +1824,14 @@ Code.740=0A 18 42 80 12 A8 92 09 30 05 07 01 B6 01 B6 2B \
          3C 01 5C 3C B8 7E A5 62 6A 29 03 AA B5 5D 85 5E \
          A5 62 85 5D 44 5D 80 03 3C 05 77 3C 02 83 4C 00 \
          FF
-Code.6805-C9=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
-             F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
-             B7 7B A6 08 B7 67 B6 5F 46 A4 03 B7 58 A6 05 B7 \
-             77 CC 01 B2
+Code.6805-C9=0A 19 42 20 12 A8 D0 08 30 05 07 01 B5 01 B5 20 \
+             64 60 01 BA 01 08 18 AE 05 00 5E 1A 01 5F 15 18_7B \
+             B6 5F 44 A4 03 97 E6 5A B7 5B B6 5F 43 B7 5A AE \
+             01 20 02 BF 74 BF 59 AD 04 AD 02 12_7C CC 01 83
+Code.6805-RC16/18=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
+                  F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
+                  B7_7B A6 08 B7_67 B6 5F 46 A4 03 B7 58 A6 05 \
+                  B7_77 CC 01 B2
 
 [Sony DSP]
 PID=01 42
@@ -1765,6 +1851,17 @@ CmdParms=OBC:7=0,Device:0|1=0
 CmdTranslator=Translator(lsb,0,7,0) Translator(1,1,7)
 CmdParmInit=PickInitializer(1,0,1)
 Code.S3C80=02 02 31 8B 14 F5 15 05 07 02 58 01 18 01 2C 01 18 59 69 04 B3 01 18 00 03 08 05 76 06 01 6B 04 20 01 10 C0 10 C0 FB 03 E6 12 08 8D 01 49
+
+[Streamzap]
+PID=01 24
+DevParms=Device Code:6=35
+DeviceTranslator=Translator(comp,0,6,2)
+FixedData=ff
+CmdTranslator=Translator(comp,0,6)
+DefaultCmd=ff
+CmdParms=OBC:6=0
+Notes=This protocol is similar to RC5 but has an extra device bit
+Code.S3C80=43 8C 11 8B 13 85 85 10 08 06 01 A6 01 92 01 A6 01 92 A3 34 01 A6 00 00 08 00 27 0D 03 8D 01 46
 
 [Teac-K (*)]
 PID=00 BB
