--- a/protocols.ini
+++ b/protocols.ini
@@ -1959,18 +1959,18 @@ Code.S3C80=38 87 01 8B 11 05 05 04 07 B9 07 A5 02 3C 0D 21 00 00 17 2B 07 A5 E4 
 Code.740=0A 17 01 80 12 8C 80 08 A0 00 05 06 1D 09 AD 00 00 00 00 00 00 04 30 A5 5D 85 5F 0A 85 5D A5 5A 85 5E 82 5E E6 5C 80 07 A5 5F 85 5E 3C 06 77 22 00 A9 E3 20 DB 00 20 DB 00 A2 D7 A0 03 22 44 22 06 90 E5 60
 Code.6805-C9=0A 17 01 20 12 8C 80 08 A0 00 05 05 FF 09 89 04 33 DF 06 20 02 04 30 B6 5A B7 5C 48 B7 5A B6 57 49 49 49 49 B7 5B 3C 59 20 08 B6 5C B7 5B A6 06 B7 74 CD 01 83 A6 DF CD 00 B7 CD 00 B7 A6 04 AE 83 CD 01 9F CD 01 8C 24 E1 81
 Code.6805-RC16/18=0E 23 01 20 0F 05 05 04 33 DC DC 16 1D 9B 00 00 00 B3 95 DD B6 5A B7 5C 43 48 B7 5D 38 5A B6 57 49 49 49 49 B7 5B 3C_66 CD 01 AF 10_7C 14_7C 12_66 12 58 3C_67 3C_68 CC 01 B2
-
-[Zenith]
-PID=00 22
-CmdTranslator=ZenithCmdTranslator() TranslatorFromDev(2,1,0)
-CmdParms=OBC=0
-Notes=
-DevParms=Signal Length:3=6,Long RECORD:bool,Style:0|1
-DeviceTranslator=ZenithTranslator() Translator(1,1,0)
-FixedData=06
-Code.S3C80=2F 94 11 8B 13 C5 81 40 08 00 00 FA 00 E6 00 FA 09 E2 5F 7C 00 FA 07 ED 08 03 37 0E 0A 77 0E F6 01 46 FB 03 E6 0D 15 CF 10 C0 00 C0 18 C0 CF 36 C0 08 FB 04 19 12 8B 02 09 13 2C 08 08 04 18 C0 60 C1 10 C0 10 04 10 03 10 C1 10 04 10 03 2A F2 10 04 10 03 9E 0C 1E 1C C0 2C 04 F6 01 5B 8D 01 46
-Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF 3C AF 3E EF 28 3C C8 22 3C AF 23 FF 28 A5 5D 85 56 3C 01 55 22 23 44 54 A9 14 20 DB 00 E7 54 1D A2 9C A0 07 22 44 44 54 C6 55 D0 EC 3C 02 55 06 54 C6 56 D0 E3 22 06 A7 3E FD 90 C3 60 A2 A2 A0 01 22 44 A9 14 20 DB 00 A2 4F A0 06 22 44 80 D6
-Code.6805-C9=07 1C 11 0F 5A 09 CD 01 AD 25 04 AE 15 20 02 AE 01 1F 5A BF 53 B6 5A B7 52 3F 51 3C 51 B6 5B B7 50 33 50 A6 14 CD 00 B7 0E 50 25 A6 07 AE 8B CD 01 9F 33 50 3A 51 26 EB A6 02 B7 51 38 50 3A 52 26 E1 A6 98 AE C6 CD 01 9E 3A 53 26 C8 CC 01 89 A6 A1 4A 26 FD A6 15 CD 00 B7 A6 06 AE 4E CD 01 9F 20 CF
+[Zenith] 
+PID=00 22 
+CmdTranslator=ZenithCmdTranslator() TranslatorFromDev(comp,2,1,0) 
+CmdParms=OBC=0 
+DevParms=Device (Signal Length):3=6,Long RECORD:bool,Sub-Device (Style):0|1 
+DeviceTranslator=ZenithTranslator() Translator(1,1,0) 
+Notes=The signal length in bits is decoded in IR as "Device" and the lead in style \ 
+as "Sub-Device". Sub-Device (Style) 1 aka "double-start" is usually used in TV's, the rest use 0 aka "single start". 
+FixedData=06 
+Code.S3C80=2F 94 11 8B 13 C5 81 40 08 00 00 FA 00 E6 00 FA 09 E2 5F 7C 00 FA 07 ED 08 03 37 0E 0A 77 0E F6 01 46 FB 03 E6 0D 15 CF 10 C0 00 C0 18 C0 CF 36 C0 08 FB 04 19 12 8B 02 09 13 2C 08 08 04 18 C0 60 C1 10 C0 10 04 10 03 10 C1 10 04 10 03 2A F2 10 04 10 03 9E 0C 1E 1C C0 2C 04 F6 01 5B 8D 01 46 
+Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF 3C AF 3E EF 28 3C C8 22 3C AF 23 FF 28 A5 5D 85 56 3C 01 55 22 23 44 54 A9 14 20 DB 00 E7 54 1D A2 9C A0 07 22 44 44 54 C6 55 D0 EC 3C 02 55 06 54 C6 56 D0 E3 22 06 A7 3E FD 90 C3 60 A2 A2 A0 01 22 44 A9 14 20 DB 00 A2 4F A0 06 22 44 80 D6 
+Code.6805-C9=07 1C 11 0F 5A 09 CD 01 AD 25 04 AE 15 20 02 AE 01 1F 5A BF 53 B6 5A B7 52 3F 51 3C 51 B6 5B B7 50 33 50 A6 14 CD 00 B7 0E 50 25 A6 07 AE 8B CD 01 9F 33 50 3A 51 26 EB A6 02 B7 51 38 50 3A 52 26 E1 A6 98 AE C6 CD 01 9E 3A 53 26 C8 CC 01 89 A6 A1 4A 26 FD A6 15 CD 00 B7 A6 06 AE 4E CD 01 9F 20 CF 
 Code.6805-RC16/18=0C 26 11 20 0F C5 01 08 00 00 7C 7D 04 7C FB AF C8 04 7C 01 0F 5A 0B 1F 5A CD 01 A1 25 04 A6 15 B7_80 B6 5A 48 4A 97 A0 08 24 04 BF_67 20 02 B7_68 A6 08 B7 50 B6 5B 97 53 48 39 5B 39 5A 58 39 5B 39 5A 3A 50 26 F2 38 5B 39 5A 3C D6 AE 03 E6_70 E7 B9 5A 26 F9 CC 01 AF
 
 # [pid: 00 01]
